# nexus

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
nexus-client/: Cargo.toml  FONTS.md  build.rs
nexus-client/assets/linux/: README.md  nexus.desktop
nexus-client/assets/macos/: README.md  generate_assets.sh  nexus.icns
nexus-client/assets/windows/: README.md  generate_assets.sh
nexus-client/fonts/: icons.toml
nexus-client/locales/de/: ui.ftl
nexus-client/locales/en/: ui.ftl
nexus-client/locales/es/: ui.ftl
nexus-client/locales/fr/: ui.ftl
nexus-client/locales/it/: ui.ftl
nexus-client/locales/ja/: ui.ftl
nexus-client/locales/ko/: ui.ftl
nexus-client/locales/nl/: ui.ftl
nexus-client/locales/pt-BR/: ui.ftl
nexus-client/locales/pt-PT/: ui.ftl
nexus-client/locales/ru/: ui.ftl
nexus-client/locales/zh-CN/: ui.ftl
nexus-client/locales/zh-TW/: ui.ftl
nexus-client/src/: autostart.rs  avatar.rs  config.rs  fonts.rs  i18n.rs  icon.rs  icons.rs  image.rs  main.rs  network.rs  types.rs  user_avatar.rs  views.rs
nexus-client/src/commands/: broadcast.rs  clear.rs  focus.rs  help.rs  list.rs  message.rs  mod.rs  server_info.rs  serverinfo.rs  topic.rs  user_info.rs  user_kick.rs  userinfo.rs  userkick.rs  window.rs
nexus-client/src/config/: bookmarks.rs  mod.rs  persistence.rs  settings.rs  theme.rs
nexus-client/src/handlers/: bookmarks.rs  broadcast.rs  connection.rs  fingerprint.rs  keyboard.rs  mod.rs  network.rs  server_info.rs  settings.rs  ui.rs  user_management.rs
nexus-client/src/handlers/network/: chat.rs  connection.rs  constants.rs  fingerprint.rs  helpers.rs  mod.rs
nexus-client/src/handlers/network/messages/: broadcast.rs  chat.rs  error.rs  mod.rs  permissions.rs  user_admin.rs  user_connection.rs  user_info.rs  user_kick.rs  user_message.rs
nexus-client/src/i18n/: bundle.rs  constants.rs  locale.rs  mod.rs  permissions.rs  translate.rs
nexus-client/src/network/: connect.rs  constants.rs  mod.rs  stream.rs  tls.rs  types.rs
nexus-client/src/style/: celestial.rs  chat.rs  colors.rs  fonts.rs  icons.rs  layout.rs  mod.rs  palette.rs  shaping.rs  ui.rs  widgets.rs  window.rs
nexus-client/src/types/: bookmark.rs  connection.rs  display.rs  form.rs  message.rs  mod.rs  pending.rs  ui.rs  view_config.rs
nexus-client/src/views/: about.rs  admin.rs  bookmark.rs  broadcast.rs  chat.rs  colors.rs  connection.rs  constants.rs  fingerprint.rs  layout.rs  mod.rs  server_info.rs  server_list.rs  settings.rs  style.rs  user_info.rs  user_list.rs  users.rs
nexus-common/: Cargo.toml
nexus-common/src/: io.rs  lib.rs  protocol.rs  version.rs  yggdrasil.rs
nexus-common/src/framing/: error.rs  frame.rs  limits.rs  message_id.rs  mod.rs  reader.rs  writer.rs
nexus-common/src/validators/: avatar.rs  chat_topic.rs  data_uri.rs  features.rs  locale.rs  message.rs  mod.rs  password.rs  permissions.rs  server_description.rs  server_image.rs  (+5 more)
nexus-server/: Cargo.toml
nexus-server/locales/de/: errors.ftl
nexus-server/locales/en/: errors.ftl
nexus-server/locales/es/: errors.ftl
nexus-server/locales/fr/: errors.ftl
nexus-server/locales/it/: errors.ftl
nexus-server/locales/ja/: errors.ftl
nexus-server/locales/ko/: errors.ftl
nexus-server/locales/nl/: errors.ftl
nexus-server/locales/pt-BR/: errors.ftl
nexus-server/locales/pt-PT/: errors.ftl
nexus-server/locales/ru/: errors.ftl
nexus-server/locales/zh-CN/: errors.ftl
nexus-server/locales/zh-TW/: errors.ftl
nexus-server/migrations/: 20240101000000_create_users.sql  20240102000000_case_insensitive_username.sql  20240103000000_add_server_config.sql  20251125235241_add_user_enabled.sql  20251202000347_add_topic_set_by.sql  20251206203752_add_max_connections_per_ip.sql  20251206215123_add_server_name_description.sql  20251209184800_separate_chat_state.sql  20251209234610_add_server_image.sql
nexus-server/src/: args.rs  connection.rs  constants.rs  contracker.rs  i18n.rs  lib.rs  main.rs  upnp.rs  validation.rs
nexus-server/src/db/: chat.rs  config.rs  errors.rs  mod.rs  password.rs  permissions.rs  sql.rs  testing.rs  users.rs
nexus-server/src/handlers/: broadcast.rs  chat.rs  chat_topic_update.rs  chattopicupdate.rs  errors.rs  handshake.rs  login.rs  mod.rs  server_info_update.rs  testing.rs  user_create.rs  user_delete.rs  user_edit.rs  user_info.rs  user_kick.rs  user_list.rs  user_message.rs  user_update.rs  usercreate.rs  userdelete.rs  useredit.rs  userinfo.rs  userkick.rs  userlist.rs  usermessage.rs  userupdate.rs
nexus-server/src/users/: manager.rs  mod.rs  user.rs
nexus-server/src/users/manager/: broadcasts.rs  helpers.rs  mod.rs  mutations.rs  queries.rs
nexus-server/tests/: multi_session.rs
nexus-server/tests/common/: mod.rs
