[package]
name = "nexus-client"
version = "0.1.0"
edition = "2024"

[dependencies]
nexus-common = { path = "../nexus-common" }
iced = { version = "0.13", features = ["tokio"] }
tokio = { version = "1.42", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.20"
chrono = "0.4"
dirs = "5.0"

[[bin]]
name = "nexus"
path = "src/main.rs"
