[package]
name = "nexus-client"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "BBS client for Yggdrasil network"

[package.metadata.bundle]
name = "Nexus BBS"
identifier = "at.greyh.nexus"
icon = ["assets/macos/nexus.icns", "assets/windows/nexus.ico"]
category = "public.app-category.social-networking"
short_description = "BBS client for Yggdrasil network"
copyright = "Copyright (c) Josh Ellithorpe 2025. All rights reserved."

[dependencies]
nexus-common = { path = "../nexus-common" }
iced = { version = "0.13", features = ["tokio"] }
tokio = { version = "1.42", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.20"
chrono = "0.4"
dirs = "5.0"

[build-dependencies]
iced_fontello = "0.13"

[[bin]]
name = "nexus"
path = "src/main.rs"
