[package]
name = "nexus-client"
version = "0.4.0"
edition = "2024"
license = "MIT"
description = "BBS client for Yggdrasil network"

[package.metadata.bundle]
name = "Nexus BBS"
identifier = "at.greyh.nexus"
icon = ["assets/macos/nexus.png", "assets/windows/nexus.ico"]
category = "public.app-category.social-networking"
short_description = "BBS client for Yggdrasil network"
copyright = "Copyright (c) 2025 Nexus BBS Project"

[dependencies]
nexus-common = { path = "../nexus-common" }
iced = { version = "0.14", features = ["image", "markdown", "svg", "tokio"] }
tokio = { version = "1.48", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.21"
chrono = "0.4"
dirs = "6.0"
tokio-rustls = "0.26"
rustls-native-certs = "0.8"
webpki-roots = "1.0"
sha2 = "0.10"
sys-locale = "0.3"
fluent-bundle = "0.16"
unic-langid = "0.9"
open = "5"
linkify = "0.10"
rfd = "0.16"
base64 = "0.22"
identicon-rs = "7.0"
image = "0.25"

[build-dependencies]
iced_fontello = "0.13.2"

[[bin]]
name = "nexus"
path = "src/main.rs"
