[package]
name = "nexus-server"
version = "0.1.0"
edition = "2024"

[dependencies]
nexus-common = { path = "../nexus-common" }
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.48", features = ["net", "rt-multi-thread", "macros", "io-util", "sync"] }
serde_json = "1.0"
socket2 = "0.6"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
chrono = "0.4"
dirs = "6.0"
argon2 = { version = "0.5", features = ["std"] }
strum = { version = "0.27", features = ["derive"] }

[[bin]]
name = "nexusd"
path = "src/main.rs"
